# rules_jsonnet

./: .gitignore  MODULE.bazel  README.md  WORKSPACE
.bazelci/: presubmit.yml
.github/workflows/: create_archive_and_notes.sh  release.yml
docs/: BUILD.bazel  MODULE.bazel  jsonnet.md
docs/jsonnet/: jsonnet.html
examples/: BUILD  MODULE.bazel  extvar_filegroup.jsonnet  extvar_filegroup_golden.json  extvar_files_generated.jsonnet  extvar_files_generated_golden.json  imports_default_output.jsonnet  invalid.out  multiple_outs.jsonnet  multiple_outs_nested_asymmetric.jsonnet  other_module.jsonnet  out_dir.jsonnet  tla_str_files_golden.json  tlavar_env.jsonnet  tlavar_stamp.jsonnet  tlavar_str.jsonnet
examples/imports/: BUILD
examples/imports/tier2/: BUILD
examples/imports/tier2/tier3/: BUILD
examples/other_module/: BUILD.bazel  MODULE.bazel
examples/other_toolchain_module/: MODULE.bazel
jsonnet/: BUILD  docs.bzl  extensions.bzl  jsonnet.bzl  toolchain.bzl
