module(
    name = "rules_jsonnet",
    version = "0.6.0",
)

bazel_dep(name = "rules_python", version = "1.0.0")
bazel_dep(name = "bazel_skylib", version = "1.7.1")
bazel_dep(name = "jsonnet", version = "0.20.0.bcr.1")
bazel_dep(name = "jsonnet_go", version = "0.20.0")

jsonnet = use_extension("//jsonnet:extensions.bzl", "jsonnet")
use_repo(jsonnet, "rules_jsonnet_toolchain")

register_toolchains("@rules_jsonnet_toolchain//:toolchain")
