module(
    name = "examples",
    version = "0.0.0",
)

bazel_dep(name = "rules_jsonnet", version = "0.0.0")
local_path_override(
    module_name = "rules_jsonnet",
    path = "..",
)

bazel_dep(name = "other_module", version = "0.0.0")
local_path_override(
    module_name = "other_module",
    path = "other_module",
)
